@@ -29,6 +29,7 @@ v3.4.5 to
 - Add \2ror and \2rot for Adv2 op 11.
 - Add \d<YMD> and \d<DMY> to generate long format intro dates.
 - Support the extended action 5 format.
+- Add support for string codes 9A 01 through 9A 04.
 
 v3.4.4 to v3.4.5 (r1396)
 - Data file updates:
